# DVR

./: DVR.jks  local.properties  settings.gradle.kts
app/: build.gradle  build.gradle.kts  build.old
app/jni/: build.bat
app/jni/SDL/include/: SDL_opengl.h
app/jni/SDL_net/.svn/: all-wcprops  entries
app/jni/SDL_net/include/.svn/: entries
app/jni/prboom/: config.h  d_client.c  d_main.c  d_main.h  i_main.c  i_sound.c  i_video.c  i_video_jni.c  jni_doom.c  m_menu.c  m_misc.c  r_fps.c  r_main.c  r_main.h  r_things.c  s_sound.c
app/jni/prboom/include/: doom_jni_Natives.h  jni_doom.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: DVR.cfg
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/prboom/: Android.mk  d_server.c  i_video.c  m_menu.c
app/src/main/cpp/prboom/include/: doom_jni_Natives.h  jni_doom.h
app/src/main/java/com/drbeef/dvr/: DVRConfig.java  DVRFBO.java  DownloadTask.java  DownloaderActivity.java  MainActivity.java  OpenGL.java  WADChooser.java  ZipExtractor.java
app/src/main/java/doom/audio/: AudioClip.java  AudioManager.java
app/src/main/java/doom/util/: DoomTools.java  Natives.java
app/src/main/res/layout/: activity_downloader.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
